reference/5.1/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390782
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft. PowerShell. Core
ms.openlocfilehash: 2292aa015ff3471ac7febdda94e1a10e895dea27
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93269667"
---
# <span data-ttu-id="df35b-103">Microsoft. PowerShell. Core-modul</span><span class="sxs-lookup"><span data-stu-id="df35b-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="df35b-104">Beskrivning</span><span class="sxs-lookup"><span data-stu-id="df35b-104">Description</span></span>

<span data-ttu-id="df35b-105">Det här avsnittet innehåller hjälp avsnitten för de cmdletar som är installerade med PowerShell-modulen Microsoft. PowerShell. Core.</span><span class="sxs-lookup"><span data-stu-id="df35b-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="df35b-106">Huvud-modulen innehåller cmdlets och providers som hanterar de grundläggande funktionerna i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="df35b-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="df35b-107">Microsoft. PowerShell. Core-cmdletar</span><span class="sxs-lookup"><span data-stu-id="df35b-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="df35b-108">Lägg till-historik</span><span class="sxs-lookup"><span data-stu-id="df35b-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="df35b-109">Lägger till poster i sessionens historik.</span><span class="sxs-lookup"><span data-stu-id="df35b-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="df35b-110">Add-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="df35b-110">Add-PSSnapin</span></span>](Add-PSSnapin.md)
<span data-ttu-id="df35b-111">Lägger till en eller flera Windows PowerShell-snapin-moduler i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-111">Adds one or more Windows PowerShell snap-ins to the current session.</span></span>

### [<span data-ttu-id="df35b-112">Rensa – historik</span><span class="sxs-lookup"><span data-stu-id="df35b-112">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="df35b-113">Tar bort poster från PowerShell-sessionens kommando historik.</span><span class="sxs-lookup"><span data-stu-id="df35b-113">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="df35b-114">Rensa värd</span><span class="sxs-lookup"><span data-stu-id="df35b-114">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="df35b-115">Tar bort visningen i värd programmet.</span><span class="sxs-lookup"><span data-stu-id="df35b-115">Clears the display in the host program.</span></span>

### [<span data-ttu-id="df35b-116">Anslut – PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-116">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="df35b-117">Återansluter till frånkopplade sessioner.</span><span class="sxs-lookup"><span data-stu-id="df35b-117">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="df35b-118">Fel sökning – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-118">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="df35b-119">Fel vid körning av ett arbets flödes jobb i bakgrunden, fjärrdatorn eller Windows PowerShell.</span><span class="sxs-lookup"><span data-stu-id="df35b-119">Debugs a running background, remote, or Windows PowerShell Workflow job.</span></span>

### [<span data-ttu-id="df35b-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="df35b-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="df35b-121">Förhindrar att PowerShell-slutpunkter tar emot fjärr anslutningar.</span><span class="sxs-lookup"><span data-stu-id="df35b-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="df35b-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="df35b-123">Inaktiverar nodkonfigurationer på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="df35b-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="df35b-124">Koppla från-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="df35b-125">Kopplar från en session.</span><span class="sxs-lookup"><span data-stu-id="df35b-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="df35b-126">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="df35b-126">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="df35b-127">Konfigurerar datorn att ta emot fjärrkommandon.</span><span class="sxs-lookup"><span data-stu-id="df35b-127">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="df35b-128">Aktivera – PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-128">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="df35b-129">Aktiverar sessionsinställningar på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="df35b-129">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="df35b-130">Retur-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="df35b-130">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="df35b-131">Ansluter till och går in i en interaktiv session med en lokal process.</span><span class="sxs-lookup"><span data-stu-id="df35b-131">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="df35b-132">Retur-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-132">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="df35b-133">Startar en interaktiv session med en fjärran sluten dator.</span><span class="sxs-lookup"><span data-stu-id="df35b-133">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="df35b-134">Avsluta-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="df35b-134">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="df35b-135">Stänger en interaktiv session med en lokal process.</span><span class="sxs-lookup"><span data-stu-id="df35b-135">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="df35b-136">Avsluta-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-136">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="df35b-137">Avslutar en interaktiv session med en fjärran sluten dator.</span><span class="sxs-lookup"><span data-stu-id="df35b-137">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="df35b-138">Exportera-konsol</span><span class="sxs-lookup"><span data-stu-id="df35b-138">Export-Console</span></span>](Export-Console.md)
<span data-ttu-id="df35b-139">Exporterar namn på snapin-moduler i den aktuella sessionen till en konsol fil.</span><span class="sxs-lookup"><span data-stu-id="df35b-139">Exports the names of snap-ins in the current session to a console file.</span></span>

### [<span data-ttu-id="df35b-140">Exportera – ModuleMember</span><span class="sxs-lookup"><span data-stu-id="df35b-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="df35b-141">Anger de modul medlemmar som exporteras.</span><span class="sxs-lookup"><span data-stu-id="df35b-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="df35b-142">-Objekt</span><span class="sxs-lookup"><span data-stu-id="df35b-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="df35b-143">Utför en åtgärd mot varje objekt i en samling inobjekt.</span><span class="sxs-lookup"><span data-stu-id="df35b-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="df35b-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="df35b-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="df35b-145">Hämtar alla kommandon.</span><span class="sxs-lookup"><span data-stu-id="df35b-145">Gets all commands.</span></span>

### [<span data-ttu-id="df35b-146">Get – hjälp</span><span class="sxs-lookup"><span data-stu-id="df35b-146">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="df35b-147">Visar information om PowerShell-kommandon och-koncept.</span><span class="sxs-lookup"><span data-stu-id="df35b-147">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="df35b-148">Hämta historik</span><span class="sxs-lookup"><span data-stu-id="df35b-148">Get-History</span></span>](Get-History.md)
<span data-ttu-id="df35b-149">Hämtar en lista med kommandon som angavs under den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-149">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="df35b-150">Hämta jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-150">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="df35b-151">Hämtar PowerShell-bakgrunds jobb som körs i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-151">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="df35b-152">Hämta modul</span><span class="sxs-lookup"><span data-stu-id="df35b-152">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="df35b-153">Hämtar de moduler som har importer ATS eller som kan importeras till den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-153">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="df35b-154">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="df35b-154">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="df35b-155">Hämtar process information om PowerShell-värden.</span><span class="sxs-lookup"><span data-stu-id="df35b-155">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="df35b-156">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-156">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="df35b-157">Hämtar PowerShell-sessioner på lokala och fjärranslutna datorer.</span><span class="sxs-lookup"><span data-stu-id="df35b-157">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="df35b-158">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="df35b-158">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="df35b-159">Hämtar funktionerna för en speciell användare i en begränsad sessions konfiguration.</span><span class="sxs-lookup"><span data-stu-id="df35b-159">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="df35b-160">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-160">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="df35b-161">Hämtar de registrerade sessionsbaserade på datorn.</span><span class="sxs-lookup"><span data-stu-id="df35b-161">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="df35b-162">Get-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="df35b-162">Get-PSSnapin</span></span>](Get-PSSnapin.md)
<span data-ttu-id="df35b-163">Hämtar snapin-moduler för Windows PowerShell på datorn.</span><span class="sxs-lookup"><span data-stu-id="df35b-163">Gets the Windows PowerShell snap-ins on the computer.</span></span>

### [<span data-ttu-id="df35b-164">Get-verb</span><span class="sxs-lookup"><span data-stu-id="df35b-164">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="df35b-165">Hämtar godkända PowerShell-verb.</span><span class="sxs-lookup"><span data-stu-id="df35b-165">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="df35b-166">Importera-modul</span><span class="sxs-lookup"><span data-stu-id="df35b-166">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="df35b-167">Lägger till moduler i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-167">Adds modules to the current session.</span></span>

### [<span data-ttu-id="df35b-168">Invoke-kommando</span><span class="sxs-lookup"><span data-stu-id="df35b-168">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="df35b-169">Kör kommandon på lokala datorer och fjärrdatorer.</span><span class="sxs-lookup"><span data-stu-id="df35b-169">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="df35b-170">Anropa-historik</span><span class="sxs-lookup"><span data-stu-id="df35b-170">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="df35b-171">Kör kommandon från tidigare sessioner.</span><span class="sxs-lookup"><span data-stu-id="df35b-171">Runs commands from the session history.</span></span>

### [<span data-ttu-id="df35b-172">Ny modul</span><span class="sxs-lookup"><span data-stu-id="df35b-172">New-Module</span></span>](New-Module.md)
<span data-ttu-id="df35b-173">Skapar en ny dynamisk modul som bara finns i minnet.</span><span class="sxs-lookup"><span data-stu-id="df35b-173">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="df35b-174">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="df35b-174">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="df35b-175">Skapar ett nytt modul manifest.</span><span class="sxs-lookup"><span data-stu-id="df35b-175">Creates a new module manifest.</span></span>

### [<span data-ttu-id="df35b-176">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="df35b-176">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="df35b-177">Skapar en fil som definierar en uppsättning funktioner som ska exponeras via en konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-177">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="df35b-178">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-178">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="df35b-179">Skapar en permanent anslutning till en lokal dator eller fjärrdator.</span><span class="sxs-lookup"><span data-stu-id="df35b-179">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="df35b-180">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="df35b-180">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="df35b-181">Skapar en fil som definierar en sessions konfiguration.</span><span class="sxs-lookup"><span data-stu-id="df35b-181">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="df35b-182">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="df35b-182">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="df35b-183">Skapar ett objekt som innehåller avancerade alternativ för en PSSession.</span><span class="sxs-lookup"><span data-stu-id="df35b-183">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="df35b-184">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="df35b-184">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="df35b-185">Skapar ett objekt som innehåller avancerade alternativ för en konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-185">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="df35b-186">Ut-standard</span><span class="sxs-lookup"><span data-stu-id="df35b-186">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="df35b-187">Skickar utdata till standard-formateraren och till standardutdata-cmdleten.</span><span class="sxs-lookup"><span data-stu-id="df35b-187">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="df35b-188">Ut-värd</span><span class="sxs-lookup"><span data-stu-id="df35b-188">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="df35b-189">Skickar utdata till kommando raden.</span><span class="sxs-lookup"><span data-stu-id="df35b-189">Sends output to the command line.</span></span>

### [<span data-ttu-id="df35b-190">Ut-null</span><span class="sxs-lookup"><span data-stu-id="df35b-190">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="df35b-191">Döljer utdata i stället för att skicka den till pipelinen eller genom att visa den.</span><span class="sxs-lookup"><span data-stu-id="df35b-191">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="df35b-192">Mottagning – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-192">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="df35b-193">Hämtar resultatet av PowerShell-bakgrunds jobben i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-193">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="df35b-194">Ta emot – PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-194">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="df35b-195">Hämtar resultat från kommandon i frånkopplade sessioner.</span><span class="sxs-lookup"><span data-stu-id="df35b-195">Gets results of commands in disconnected sessions.</span></span>

### [<span data-ttu-id="df35b-196">Registrera – ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="df35b-196">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="df35b-197">Registrerar en anpassad argument slutförare.</span><span class="sxs-lookup"><span data-stu-id="df35b-197">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="df35b-198">Registrera – PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-198">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="df35b-199">Skapar och registrerar en ny konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-199">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="df35b-200">Ta bort – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-200">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="df35b-201">Tar bort ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="df35b-201">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="df35b-202">Ta bort modul</span><span class="sxs-lookup"><span data-stu-id="df35b-202">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="df35b-203">Tar bort moduler från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-203">Removes modules from the current session.</span></span>

### [<span data-ttu-id="df35b-204">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="df35b-204">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="df35b-205">Stänger en eller flera PowerShell-sessioner (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="df35b-205">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="df35b-206">Remove-PSSnapin</span><span class="sxs-lookup"><span data-stu-id="df35b-206">Remove-PSSnapin</span></span>](Remove-PSSnapin.md)
<span data-ttu-id="df35b-207">Tar bort Windows PowerShell-snapin-moduler från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="df35b-207">Removes Windows PowerShell snap-ins from the current session.</span></span>

### [<span data-ttu-id="df35b-208">Återuppta – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-208">Resume-Job</span></span>](Resume-Job.md)
<span data-ttu-id="df35b-209">Startar om ett pausat jobb.</span><span class="sxs-lookup"><span data-stu-id="df35b-209">Restarts a suspended job.</span></span>

### [<span data-ttu-id="df35b-210">Spara – hjälp</span><span class="sxs-lookup"><span data-stu-id="df35b-210">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="df35b-211">Hämtar och sparar de senaste hjälpfilerna till en fil system katalog.</span><span class="sxs-lookup"><span data-stu-id="df35b-211">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="df35b-212">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="df35b-212">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="df35b-213">Aktiverar och inaktiverar funktioner för skript fel sökning, ställer in spårnings nivå och växlar till strikt läge.</span><span class="sxs-lookup"><span data-stu-id="df35b-213">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="df35b-214">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-214">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="df35b-215">Ändrar egenskaperna för en registrerad session-konfiguration.</span><span class="sxs-lookup"><span data-stu-id="df35b-215">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="df35b-216">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="df35b-216">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="df35b-217">Skapar och tillämpar kod regler i uttryck, skript och skript block.</span><span class="sxs-lookup"><span data-stu-id="df35b-217">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="df35b-218">Start – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-218">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="df35b-219">Startar ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="df35b-219">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="df35b-220">Stoppa – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-220">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="df35b-221">Stoppar ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="df35b-221">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="df35b-222">Pausa – jobb</span><span class="sxs-lookup"><span data-stu-id="df35b-222">Suspend-Job</span></span>](Suspend-Job.md)
<span data-ttu-id="df35b-223">Stoppar tillfälligt arbets flödes jobb.</span><span class="sxs-lookup"><span data-stu-id="df35b-223">Temporarily stops workflow jobs.</span></span>

### [<span data-ttu-id="df35b-224">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="df35b-224">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="df35b-225">Verifierar att en modul manifest fil beskriver innehållet i en modul korrekt.</span><span class="sxs-lookup"><span data-stu-id="df35b-225">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="df35b-226">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="df35b-226">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="df35b-227">Verifierar nycklar och värden i en sessions konfigurations fil.</span><span class="sxs-lookup"><span data-stu-id="df35b-227">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="df35b-228">Avregistrera-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="df35b-228">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="df35b-229">Tar bort registrerade sessionsbaserade från datorn.</span><span class="sxs-lookup"><span data-stu-id="df35b-229">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="df35b-230">Uppdatera – hjälp</span><span class="sxs-lookup"><span data-stu-id="df35b-230">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="df35b-231">Laddar ned och installerar de senaste hjälpfilerna på din dator.</span><span class="sxs-lookup"><span data-stu-id="df35b-231">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="df35b-232">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="df35b-232">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="df35b-233">Ignorerar kommando tolken tills en eller flera av PowerShell-bakgrunds jobben som körs i sessionen har slutförts.</span><span class="sxs-lookup"><span data-stu-id="df35b-233">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="df35b-234">Where-objekt</span><span class="sxs-lookup"><span data-stu-id="df35b-234">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="df35b-235">Väljer objekt från en samling baserat på deras egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="df35b-235">Selects objects from a collection based on their property values.</span></span>
