reference/7.0/Microsoft.PowerShell.Core/Microsoft.PowerShell.Core.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113534
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 00000000-0000-0000-0000-000000000000
Module Name: Microsoft.PowerShell.Core
ms.date: 02/28/2019
schema: 2.0.0
title: Microsoft. PowerShell. Core
ms.openlocfilehash: 839e2590d536cf06b28226f24d3a546a13520ecb
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93269840"
---
# <span data-ttu-id="d02da-103">Microsoft. PowerShell. Core-modul</span><span class="sxs-lookup"><span data-stu-id="d02da-103">Microsoft.PowerShell.Core Module</span></span>

## <span data-ttu-id="d02da-104">Beskrivning</span><span class="sxs-lookup"><span data-stu-id="d02da-104">Description</span></span>

<span data-ttu-id="d02da-105">Det här avsnittet innehåller hjälp avsnitten för de cmdletar som är installerade med PowerShell-modulen Microsoft. PowerShell. Core.</span><span class="sxs-lookup"><span data-stu-id="d02da-105">This section contains the help topics for the cmdlets that are installed with PowerShell Microsoft.PowerShell.Core module.</span></span> <span data-ttu-id="d02da-106">Huvud-modulen innehåller cmdlets och providers som hanterar de grundläggande funktionerna i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d02da-106">The Core module contains cmdlets and providers that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="d02da-107">Microsoft. PowerShell. Core-cmdletar</span><span class="sxs-lookup"><span data-stu-id="d02da-107">Microsoft.PowerShell.Core Cmdlets</span></span>

### [<span data-ttu-id="d02da-108">Lägg till-historik</span><span class="sxs-lookup"><span data-stu-id="d02da-108">Add-History</span></span>](Add-History.md)
<span data-ttu-id="d02da-109">Lägger till poster i sessionens historik.</span><span class="sxs-lookup"><span data-stu-id="d02da-109">Appends entries to the session history.</span></span>

### [<span data-ttu-id="d02da-110">Rensa – historik</span><span class="sxs-lookup"><span data-stu-id="d02da-110">Clear-History</span></span>](Clear-History.md)
<span data-ttu-id="d02da-111">Tar bort poster från PowerShell-sessionens kommando historik.</span><span class="sxs-lookup"><span data-stu-id="d02da-111">Deletes entries from the PowerShell session command history.</span></span>

### [<span data-ttu-id="d02da-112">Rensa värd</span><span class="sxs-lookup"><span data-stu-id="d02da-112">Clear-Host</span></span>](Clear-Host.md)
<span data-ttu-id="d02da-113">Tar bort visningen i värd programmet.</span><span class="sxs-lookup"><span data-stu-id="d02da-113">Clears the display in the host program.</span></span>

### [<span data-ttu-id="d02da-114">Anslut – PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-114">Connect-PSSession</span></span>](Connect-PSSession.md)
<span data-ttu-id="d02da-115">Återansluter till frånkopplade sessioner.</span><span class="sxs-lookup"><span data-stu-id="d02da-115">Reconnects to disconnected sessions.</span></span>

### [<span data-ttu-id="d02da-116">Fel sökning – jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-116">Debug-Job</span></span>](Debug-Job.md)
<span data-ttu-id="d02da-117">Fel vid körning av ett arbets flödes jobb i bakgrunden, fjärr-eller PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d02da-117">Debugs a running background, remote, or PowerShell Workflow job.</span></span>

### [<span data-ttu-id="d02da-118">Disable-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d02da-118">Disable-ExperimentalFeature</span></span>](Disable-ExperimentalFeature.md)
<span data-ttu-id="d02da-119">Inaktivera en experimentell funktion när du startar en ny instans av PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d02da-119">Disable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="d02da-120">Disable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="d02da-120">Disable-PSRemoting</span></span>](Disable-PSRemoting.md)
<span data-ttu-id="d02da-121">Förhindrar att PowerShell-slutpunkter tar emot fjärr anslutningar.</span><span class="sxs-lookup"><span data-stu-id="d02da-121">Prevents PowerShell endpoints from receiving remote connections.</span></span>

### [<span data-ttu-id="d02da-122">Disable-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-122">Disable-PSSessionConfiguration</span></span>](Disable-PSSessionConfiguration.md)
<span data-ttu-id="d02da-123">Inaktiverar nodkonfigurationer på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="d02da-123">Disables session configurations on the local computer.</span></span>

### [<span data-ttu-id="d02da-124">Koppla från-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-124">Disconnect-PSSession</span></span>](Disconnect-PSSession.md)
<span data-ttu-id="d02da-125">Kopplar från en session.</span><span class="sxs-lookup"><span data-stu-id="d02da-125">Disconnects from a session.</span></span>

### [<span data-ttu-id="d02da-126">Aktivera – ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d02da-126">Enable-ExperimentalFeature</span></span>](Enable-ExperimentalFeature.md)
<span data-ttu-id="d02da-127">Aktivera en experimentell funktion när du startar en ny instans av PowerShell.</span><span class="sxs-lookup"><span data-stu-id="d02da-127">Enable an experimental feature on startup of new instance of PowerShell.</span></span>

### [<span data-ttu-id="d02da-128">Enable-PSRemoting</span><span class="sxs-lookup"><span data-stu-id="d02da-128">Enable-PSRemoting</span></span>](Enable-PSRemoting.md)
<span data-ttu-id="d02da-129">Konfigurerar datorn att ta emot fjärrkommandon.</span><span class="sxs-lookup"><span data-stu-id="d02da-129">Configures the computer to receive remote commands.</span></span>

### [<span data-ttu-id="d02da-130">Aktivera – PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-130">Enable-PSSessionConfiguration</span></span>](Enable-PSSessionConfiguration.md)
<span data-ttu-id="d02da-131">Aktiverar sessionsinställningar på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="d02da-131">Enables the session configurations on the local computer.</span></span>

### [<span data-ttu-id="d02da-132">Retur-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="d02da-132">Enter-PSHostProcess</span></span>](Enter-PSHostProcess.md)
<span data-ttu-id="d02da-133">Ansluter till och går in i en interaktiv session med en lokal process.</span><span class="sxs-lookup"><span data-stu-id="d02da-133">Connects to and enters into an interactive session with a local process.</span></span>

### [<span data-ttu-id="d02da-134">Retur-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-134">Enter-PSSession</span></span>](Enter-PSSession.md)
<span data-ttu-id="d02da-135">Startar en interaktiv session med en fjärran sluten dator.</span><span class="sxs-lookup"><span data-stu-id="d02da-135">Starts an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="d02da-136">Avsluta-PSHostProcess</span><span class="sxs-lookup"><span data-stu-id="d02da-136">Exit-PSHostProcess</span></span>](Exit-PSHostProcess.md)
<span data-ttu-id="d02da-137">Stänger en interaktiv session med en lokal process.</span><span class="sxs-lookup"><span data-stu-id="d02da-137">Closes an interactive session with a local process.</span></span>

### [<span data-ttu-id="d02da-138">Avsluta-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-138">Exit-PSSession</span></span>](Exit-PSSession.md)
<span data-ttu-id="d02da-139">Avslutar en interaktiv session med en fjärran sluten dator.</span><span class="sxs-lookup"><span data-stu-id="d02da-139">Ends an interactive session with a remote computer.</span></span>

### [<span data-ttu-id="d02da-140">Exportera – ModuleMember</span><span class="sxs-lookup"><span data-stu-id="d02da-140">Export-ModuleMember</span></span>](Export-ModuleMember.md)
<span data-ttu-id="d02da-141">Anger de modul medlemmar som exporteras.</span><span class="sxs-lookup"><span data-stu-id="d02da-141">Specifies the module members that are exported.</span></span>

### [<span data-ttu-id="d02da-142">-Objekt</span><span class="sxs-lookup"><span data-stu-id="d02da-142">ForEach-Object</span></span>](ForEach-Object.md)
<span data-ttu-id="d02da-143">Utför en åtgärd mot varje objekt i en samling inobjekt.</span><span class="sxs-lookup"><span data-stu-id="d02da-143">Performs an operation against each item in a collection of input objects.</span></span>

### [<span data-ttu-id="d02da-144">Get-Command</span><span class="sxs-lookup"><span data-stu-id="d02da-144">Get-Command</span></span>](Get-Command.md)
<span data-ttu-id="d02da-145">Hämtar alla kommandon.</span><span class="sxs-lookup"><span data-stu-id="d02da-145">Gets all commands.</span></span>

### [<span data-ttu-id="d02da-146">Get-ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="d02da-146">Get-ExperimentalFeature</span></span>](Get-ExperimentalFeature.md)
<span data-ttu-id="d02da-147">Hämtar experimentella funktioner.</span><span class="sxs-lookup"><span data-stu-id="d02da-147">Gets experimental features.</span></span>

### [<span data-ttu-id="d02da-148">Get – hjälp</span><span class="sxs-lookup"><span data-stu-id="d02da-148">Get-Help</span></span>](Get-Help.md)
<span data-ttu-id="d02da-149">Visar information om PowerShell-kommandon och-koncept.</span><span class="sxs-lookup"><span data-stu-id="d02da-149">Displays information about PowerShell commands and concepts.</span></span>

### [<span data-ttu-id="d02da-150">Hämta historik</span><span class="sxs-lookup"><span data-stu-id="d02da-150">Get-History</span></span>](Get-History.md)
<span data-ttu-id="d02da-151">Hämtar en lista med kommandon som angavs under den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-151">Gets a list of the commands entered during the current session.</span></span>

### [<span data-ttu-id="d02da-152">Hämta jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-152">Get-Job</span></span>](Get-Job.md)
<span data-ttu-id="d02da-153">Hämtar PowerShell-bakgrunds jobb som körs i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-153">Gets PowerShell background jobs that are running in the current session.</span></span>

### [<span data-ttu-id="d02da-154">Hämta modul</span><span class="sxs-lookup"><span data-stu-id="d02da-154">Get-Module</span></span>](Get-Module.md)
<span data-ttu-id="d02da-155">Hämtar de moduler som har importer ATS eller som kan importeras till den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-155">Gets the modules that have been imported or that can be imported into the current session.</span></span>

### [<span data-ttu-id="d02da-156">Get-PSHostProcessInfo</span><span class="sxs-lookup"><span data-stu-id="d02da-156">Get-PSHostProcessInfo</span></span>](Get-PSHostProcessInfo.md)
<span data-ttu-id="d02da-157">Hämtar process information om PowerShell-värden.</span><span class="sxs-lookup"><span data-stu-id="d02da-157">Gets process information about the PowerShell host.</span></span>

### [<span data-ttu-id="d02da-158">Get-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-158">Get-PSSession</span></span>](Get-PSSession.md)
<span data-ttu-id="d02da-159">Hämtar PowerShell-sessioner på lokala och fjärranslutna datorer.</span><span class="sxs-lookup"><span data-stu-id="d02da-159">Gets the PowerShell sessions on local and remote computers.</span></span>

### [<span data-ttu-id="d02da-160">Get-PSSessionCapability</span><span class="sxs-lookup"><span data-stu-id="d02da-160">Get-PSSessionCapability</span></span>](Get-PSSessionCapability.md)
<span data-ttu-id="d02da-161">Hämtar funktionerna för en speciell användare i en begränsad sessions konfiguration.</span><span class="sxs-lookup"><span data-stu-id="d02da-161">Gets the capabilities of a specific user on a constrained session configuration.</span></span>

### [<span data-ttu-id="d02da-162">Get-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-162">Get-PSSessionConfiguration</span></span>](Get-PSSessionConfiguration.md)
<span data-ttu-id="d02da-163">Hämtar de registrerade sessionsbaserade på datorn.</span><span class="sxs-lookup"><span data-stu-id="d02da-163">Gets the registered session configurations on the computer.</span></span>

### [<span data-ttu-id="d02da-164">Importera-modul</span><span class="sxs-lookup"><span data-stu-id="d02da-164">Import-Module</span></span>](Import-Module.md)
<span data-ttu-id="d02da-165">Lägger till moduler i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-165">Adds modules to the current session.</span></span>

### [<span data-ttu-id="d02da-166">Invoke-kommando</span><span class="sxs-lookup"><span data-stu-id="d02da-166">Invoke-Command</span></span>](Invoke-Command.md)
<span data-ttu-id="d02da-167">Kör kommandon på lokala datorer och fjärrdatorer.</span><span class="sxs-lookup"><span data-stu-id="d02da-167">Runs commands on local and remote computers.</span></span>

### [<span data-ttu-id="d02da-168">Anropa-historik</span><span class="sxs-lookup"><span data-stu-id="d02da-168">Invoke-History</span></span>](Invoke-History.md)
<span data-ttu-id="d02da-169">Kör kommandon från tidigare sessioner.</span><span class="sxs-lookup"><span data-stu-id="d02da-169">Runs commands from the session history.</span></span>

### [<span data-ttu-id="d02da-170">Ny modul</span><span class="sxs-lookup"><span data-stu-id="d02da-170">New-Module</span></span>](New-Module.md)
<span data-ttu-id="d02da-171">Skapar en ny dynamisk modul som bara finns i minnet.</span><span class="sxs-lookup"><span data-stu-id="d02da-171">Creates a new dynamic module that exists only in memory.</span></span>

### [<span data-ttu-id="d02da-172">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="d02da-172">New-ModuleManifest</span></span>](New-ModuleManifest.md)
<span data-ttu-id="d02da-173">Skapar ett nytt modul manifest.</span><span class="sxs-lookup"><span data-stu-id="d02da-173">Creates a new module manifest.</span></span>

### [<span data-ttu-id="d02da-174">New-PSRoleCapabilityFile</span><span class="sxs-lookup"><span data-stu-id="d02da-174">New-PSRoleCapabilityFile</span></span>](New-PSRoleCapabilityFile.md)
<span data-ttu-id="d02da-175">Skapar en fil som definierar en uppsättning funktioner som ska exponeras via en konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-175">Creates a file that defines a set of capabilities to be exposed through a session configuration.</span></span>

### [<span data-ttu-id="d02da-176">New-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-176">New-PSSession</span></span>](New-PSSession.md)
<span data-ttu-id="d02da-177">Skapar en permanent anslutning till en lokal dator eller fjärrdator.</span><span class="sxs-lookup"><span data-stu-id="d02da-177">Creates a persistent connection to a local or remote computer.</span></span>

### [<span data-ttu-id="d02da-178">New-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="d02da-178">New-PSSessionConfigurationFile</span></span>](New-PSSessionConfigurationFile.md)
<span data-ttu-id="d02da-179">Skapar en fil som definierar en sessions konfiguration.</span><span class="sxs-lookup"><span data-stu-id="d02da-179">Creates a file that defines a session configuration.</span></span>

### [<span data-ttu-id="d02da-180">New-PSSessionOption</span><span class="sxs-lookup"><span data-stu-id="d02da-180">New-PSSessionOption</span></span>](New-PSSessionOption.md)
<span data-ttu-id="d02da-181">Skapar ett objekt som innehåller avancerade alternativ för en PSSession.</span><span class="sxs-lookup"><span data-stu-id="d02da-181">Creates an object that contains advanced options for a PSSession.</span></span>

### [<span data-ttu-id="d02da-182">New-PSTransportOption</span><span class="sxs-lookup"><span data-stu-id="d02da-182">New-PSTransportOption</span></span>](New-PSTransportOption.md)
<span data-ttu-id="d02da-183">Skapar ett objekt som innehåller avancerade alternativ för en konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-183">Creates an object that contains advanced options for a session configuration.</span></span>

### [<span data-ttu-id="d02da-184">Ut-standard</span><span class="sxs-lookup"><span data-stu-id="d02da-184">Out-Default</span></span>](Out-Default.md)
<span data-ttu-id="d02da-185">Skickar utdata till standard-formateraren och till standardutdata-cmdleten.</span><span class="sxs-lookup"><span data-stu-id="d02da-185">Sends the output to the default formatter and to the default output cmdlet.</span></span>

### [<span data-ttu-id="d02da-186">Ut-värd</span><span class="sxs-lookup"><span data-stu-id="d02da-186">Out-Host</span></span>](Out-Host.md)
<span data-ttu-id="d02da-187">Skickar utdata till kommando raden.</span><span class="sxs-lookup"><span data-stu-id="d02da-187">Sends output to the command line.</span></span>

### [<span data-ttu-id="d02da-188">Ut-null</span><span class="sxs-lookup"><span data-stu-id="d02da-188">Out-Null</span></span>](Out-Null.md)
<span data-ttu-id="d02da-189">Döljer utdata i stället för att skicka den till pipelinen eller genom att visa den.</span><span class="sxs-lookup"><span data-stu-id="d02da-189">Hides the output instead of sending it down the pipeline or displaying it.</span></span>

### [<span data-ttu-id="d02da-190">Mottagning – jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-190">Receive-Job</span></span>](Receive-Job.md)
<span data-ttu-id="d02da-191">Hämtar resultatet av PowerShell-bakgrunds jobben i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-191">Gets the results of the PowerShell background jobs in the current session.</span></span>

### [<span data-ttu-id="d02da-192">Ta emot – PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-192">Receive-PSSession</span></span>](Receive-PSSession.md)
<span data-ttu-id="d02da-193">Hämtar resultat från kommandon i frånkopplade sessioner</span><span class="sxs-lookup"><span data-stu-id="d02da-193">Gets results of commands in disconnected sessions</span></span>

### [<span data-ttu-id="d02da-194">Registrera – ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="d02da-194">Register-ArgumentCompleter</span></span>](Register-ArgumentCompleter.md)
<span data-ttu-id="d02da-195">Registrerar en anpassad argument slutförare.</span><span class="sxs-lookup"><span data-stu-id="d02da-195">Registers a custom argument completer.</span></span>

### [<span data-ttu-id="d02da-196">Registrera – PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-196">Register-PSSessionConfiguration</span></span>](Register-PSSessionConfiguration.md)
<span data-ttu-id="d02da-197">Skapar och registrerar en ny konfiguration av sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-197">Creates and registers a new session configuration.</span></span>

### [<span data-ttu-id="d02da-198">Ta bort – jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-198">Remove-Job</span></span>](Remove-Job.md)
<span data-ttu-id="d02da-199">Tar bort ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="d02da-199">Deletes a PowerShell background job.</span></span>

### [<span data-ttu-id="d02da-200">Ta bort modul</span><span class="sxs-lookup"><span data-stu-id="d02da-200">Remove-Module</span></span>](Remove-Module.md)
<span data-ttu-id="d02da-201">Tar bort moduler från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="d02da-201">Removes modules from the current session.</span></span>

### [<span data-ttu-id="d02da-202">Remove-PSSession</span><span class="sxs-lookup"><span data-stu-id="d02da-202">Remove-PSSession</span></span>](Remove-PSSession.md)
<span data-ttu-id="d02da-203">Stänger en eller flera PowerShell-sessioner (PSSessions).</span><span class="sxs-lookup"><span data-stu-id="d02da-203">Closes one or more PowerShell sessions (PSSessions).</span></span>

### [<span data-ttu-id="d02da-204">Spara – hjälp</span><span class="sxs-lookup"><span data-stu-id="d02da-204">Save-Help</span></span>](Save-Help.md)
<span data-ttu-id="d02da-205">Hämtar och sparar de senaste hjälpfilerna till en fil system katalog.</span><span class="sxs-lookup"><span data-stu-id="d02da-205">Downloads and saves the newest help files to a file system directory.</span></span>

### [<span data-ttu-id="d02da-206">Set-PSDebug</span><span class="sxs-lookup"><span data-stu-id="d02da-206">Set-PSDebug</span></span>](Set-PSDebug.md)
<span data-ttu-id="d02da-207">Aktiverar och inaktiverar funktioner för skript fel sökning, ställer in spårnings nivå och växlar till strikt läge.</span><span class="sxs-lookup"><span data-stu-id="d02da-207">Turns script debugging features on and off, sets the trace level, and toggles strict mode.</span></span>

### [<span data-ttu-id="d02da-208">Set-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-208">Set-PSSessionConfiguration</span></span>](Set-PSSessionConfiguration.md)
<span data-ttu-id="d02da-209">Ändrar egenskaperna för en registrerad session-konfiguration.</span><span class="sxs-lookup"><span data-stu-id="d02da-209">Changes the properties of a registered session configuration.</span></span>

### [<span data-ttu-id="d02da-210">Set-StrictMode</span><span class="sxs-lookup"><span data-stu-id="d02da-210">Set-StrictMode</span></span>](Set-StrictMode.md)
<span data-ttu-id="d02da-211">Skapar och tillämpar kod regler i uttryck, skript och skript block.</span><span class="sxs-lookup"><span data-stu-id="d02da-211">Establishes and enforces coding rules in expressions, scripts, and script blocks.</span></span>

### [<span data-ttu-id="d02da-212">Start – jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-212">Start-Job</span></span>](Start-Job.md)
<span data-ttu-id="d02da-213">Startar ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="d02da-213">Starts a PowerShell background job.</span></span>

### [<span data-ttu-id="d02da-214">Stoppa – jobb</span><span class="sxs-lookup"><span data-stu-id="d02da-214">Stop-Job</span></span>](Stop-Job.md)
<span data-ttu-id="d02da-215">Stoppar ett PowerShell-bakgrunds jobb.</span><span class="sxs-lookup"><span data-stu-id="d02da-215">Stops a PowerShell background job.</span></span>

### [<span data-ttu-id="d02da-216">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="d02da-216">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)
<span data-ttu-id="d02da-217">Verifierar att en modul manifest fil beskriver innehållet i en modul korrekt.</span><span class="sxs-lookup"><span data-stu-id="d02da-217">Verifies that a module manifest file accurately describes the contents of a module.</span></span>

### [<span data-ttu-id="d02da-218">Test-PSSessionConfigurationFile</span><span class="sxs-lookup"><span data-stu-id="d02da-218">Test-PSSessionConfigurationFile</span></span>](Test-PSSessionConfigurationFile.md)
<span data-ttu-id="d02da-219">Verifierar nycklar och värden i en sessions konfigurations fil.</span><span class="sxs-lookup"><span data-stu-id="d02da-219">Verifies the keys and values in a session configuration file.</span></span>

### [<span data-ttu-id="d02da-220">Avregistrera-PSSessionConfiguration</span><span class="sxs-lookup"><span data-stu-id="d02da-220">Unregister-PSSessionConfiguration</span></span>](Unregister-PSSessionConfiguration.md)
<span data-ttu-id="d02da-221">Tar bort registrerade sessionsbaserade från datorn.</span><span class="sxs-lookup"><span data-stu-id="d02da-221">Deletes registered session configurations from the computer.</span></span>

### [<span data-ttu-id="d02da-222">Uppdatera – hjälp</span><span class="sxs-lookup"><span data-stu-id="d02da-222">Update-Help</span></span>](Update-Help.md)
<span data-ttu-id="d02da-223">Laddar ned och installerar de senaste hjälpfilerna på din dator.</span><span class="sxs-lookup"><span data-stu-id="d02da-223">Downloads and installs the newest help files on your computer.</span></span>

### [<span data-ttu-id="d02da-224">Wait-Job</span><span class="sxs-lookup"><span data-stu-id="d02da-224">Wait-Job</span></span>](Wait-Job.md)
<span data-ttu-id="d02da-225">Ignorerar kommando tolken tills en eller flera av PowerShell-bakgrunds jobben som körs i sessionen har slutförts.</span><span class="sxs-lookup"><span data-stu-id="d02da-225">Suppresses the command prompt until one or all of the PowerShell background jobs running in the session are completed.</span></span>

### [<span data-ttu-id="d02da-226">Where-objekt</span><span class="sxs-lookup"><span data-stu-id="d02da-226">Where-Object</span></span>](Where-Object.md)
<span data-ttu-id="d02da-227">Väljer objekt från en samling baserat på deras egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="d02da-227">Selects objects from a collection based on their property values.</span></span>
